fix spacing for about quote

--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ nav span {
 
 #about-quote {
 	font-size: 2.5em;
+	max-width: 80%;
 }
 
 #about-author {
